--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -27,6 +27,7 @@ html {
 }
 
 body {
+    overflow-x: hidden;
     font-size: 20px;
     line-height: 1.6;
     font-weight: 400;
